--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -39,4 +37,25 @@
 
 .read-the-docs {
   color: #888;
+}
+
+/* Input personalizado para la cantidad de personajes */
+.custom-input {
+  background: #1e1e1e;
+  color: white;
+  border: 1px solid #7c4dff;
+  border-radius: 8px;
+  padding: 0.75rem 1rem;
+  font-size: 1rem;
+  text-align: center;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+.custom-input::-webkit-outer-spin-button,
+.custom-input::-webkit-inner-spin-button {
+  -webkit-appearance: none; /* Webkit */
+  margin: 0; /* Asegura que no haya espacio */
+}
+.custom-input:hover {
+  border-color: #ff4081;
+  box-shadow: 0 0 5px #ff4081;
 }
